--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dense0",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Zain-ul-din",
+    "url": "https://github.com/Zain-ul-din"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
