--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
     "next": "15.0.2",
+    "novel": "^0.5.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-firebase-hooks": "^5.1.1",
