--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-firebase-hooks": "^5.1.1",
+    "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
