--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "emblor": "^1.4.6",
     "firebase": "^11.0.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
@@ -30,6 +31,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
