--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-icons": "^5.3.0",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "url-slug": "^4.0.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
