--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/extension-paragraph": "^2.9.1",
     "@tiptap/extension-text": "^2.9.1",
     "@tiptap/html": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@vercel/blob": "^0.25.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "firebase": "^11.0.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
+    "nanoid": "^5.0.8",
     "next": "15.0.2",
     "next-themes": "^0.4.3",
     "novel": "^0.5.0",
