--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-bullet-list": "^2.9.1",
     "@tiptap/extension-document": "^2.9.1",
     "@tiptap/extension-heading": "^2.9.1",
+    "@tiptap/extension-image": "^2.9.1",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-list-item": "^2.9.1",
     "@tiptap/extension-paragraph": "^2.9.1",
@@ -44,6 +45,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.5.4",
